--- a/Samsung_S3C2442B.mw
+++ b/Samsung_S3C2442B.mw
@@ -65,4 +65,4 @@ In addition you need to make sure EN_USBHOST signal that enables the physical Ho
 * 1200mAh lithium battery charges when connected to powered host.
 * Mini-AB connector similar to [http://www.cypressindustries.com/shoponline/proddetail.asp?prod=CCMUSBAB-32005-700&cat=34 this one].
 
-[[Category:Chip]]
+[[Category:Used chip]]
