*Empty MediaWiki Message*

--- a/NXP_PCF50633.mw
+++ b/NXP_PCF50633.mw
@@ -9,3 +9,5 @@
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Connected to: [[Samsung_S3C2442B_B54]] via I2C, client address is 0x08. <br>
 * Driver Source: https://svn.openmoko.org/trunk/src/target/kernel/patches/pcf50633.patch<br>
+
+{{category:Used_chip}}
