--- a/NXP_PCF50633.mw
+++ b/NXP_PCF50633.mw
@@ -10,4 +10,4 @@
 * Connected to: [[Samsung_S3C2442B_B54]] via I2C, client address is 0x08. <br>
 * Driver Source: https://svn.openmoko.org/trunk/src/target/kernel/patches/pcf50633.patch<br>
 
-{{category:Used chip}}
+[[Category:Used chip]]
