*Empty MediaWiki Message*

--- a/ST_M58WR016KB706E.mw
+++ b/ST_M58WR016KB706E.mw
@@ -6,3 +6,5 @@
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Connected to: [[Samsung S3C2442B B54]] NAND controller
 * Used for 'unbrickable emergency boot' feature
+
+[[Category:Used chip]]
