*Empty MediaWiki Message*

--- a/TI_Calypso_D751992AZHH.mw
+++ b/TI_Calypso_D751992AZHH.mw
@@ -27,3 +27,5 @@ GPRS Class12/CS4 <br>
 * Connected to: [[Samsung S3C2410]] UART1 (full-uart, RxD, TxD, CTS, RTS),
 * Connected to (userspace): /dev/ttySAC0
 * Accessible GSM/GPRS antenna jack (if battery cover is removed)
+
+[[Category:Used chip]]
