*Empty MediaWiki Message*

--- a/ST_LIS302DL.mw
+++ b/ST_LIS302DL.mw
@@ -7,3 +7,5 @@
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Connected to: [[Samsung S3C2442B B54]] via SPI interface
 * 2 accelerometers inserted
+
+[[Category:Used chip]]
