*Empty MediaWiki Message*

--- a/Smedia_Glamo_3362.mw
+++ b/Smedia_Glamo_3362.mw
@@ -14,3 +14,5 @@
 ==Neo FreeRunner==
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Connected to: [[Samsung S3C2442B B54]] Address/Data bus <br>
+
+[[Category:Used chip]]
