*Empty MediaWiki Message*

--- a/TPO_TD028TTEC1.mw
+++ b/TPO_TD028TTEC1.mw
@@ -20,3 +20,5 @@ Note: The touch screen isn't part of the TPO TD028TTEC1, but part of the assembl
 * Connected to: [[Samsung S3C2410]] Display Controller and [[Samsung S3C2410]] SPI Interface channel 1
 * Backlight controllable via /sys/class/backlight/gta01-bl
 * Touch screen connected to: [[Samsung S3C2410]] TS controller
+
+[[Category:Used chip]]
