*Empty MediaWiki Message*

--- a/Delta_DFBM-CS320_Class2_Module.mw
+++ b/Delta_DFBM-CS320_Class2_Module.mw
@@ -13,3 +13,5 @@
 == Neo 1973 ==
 {{Main|Neo_1973_hardware}}
 * Connected to: [[Samsung S3C2410]] USB Host controller (OHCI)
+
+[[Category:Used chip]]
