*Empty MediaWiki Message*

--- a/Accton_WM3236AQ.mw
+++ b/Accton_WM3236AQ.mw
@@ -6,3 +6,5 @@
 == Neo FreeRunner ==
 {{Main|Neo_FreeRunner_GTA02_Hardware}}
 * Connected to: [[Samsung S3C2442B B54]] SDIO Host controller<br>
+
+[[Category:Used chip]]
