*Empty MediaWiki Message*

--- a/WM8753.mw
+++ b/WM8753.mw
@@ -74,3 +74,5 @@ These modes are abstract definitions, which (atm) are represented by some *.stat
 * asoc-* at [https://svn.openmoko.org/trunk/src/target/kernel/patches/ OpenMoko kernel patches]
 
 [[Category:Neo1973 Hardware]]
+[[Category:GTA02 Hardware]]
+[[Category:Used chip]]
