*Empty MediaWiki Message*

--- a/LM4853.mw
+++ b/LM4853.mw
@@ -9,3 +9,6 @@
 ** Wolfson [[WM8753]]: LOUTL (LEFTIN), LOUTR (RIGHTIN); 
 ** speaker4102: (LEFTOUT/BLTOUT-, BLTOUT+);
 ** headset-jack: ring 2 (RIGHTOUT), ring 3 (LEFTOUT/BLTOUT-) via 1uF-33R each
+
+[[Category:GTA02 Hardware]]
+[[Category:Used chip]]
