*Empty MediaWiki Message*

--- a/Analog_wired_Headset.mw
+++ b/Analog_wired_Headset.mw
@@ -21,4 +21,8 @@ tip = mic electret condenser type, to ground.
       bias (power for mic) 2K2 from +3.3v(wolfson codec) 
       (+HoldButton shortcircuit to ground)
 </nowiki></pre>
+
 [[Category:Hardware]]
+[[Category:Neo 1973 Hardware]]
+[[Category:GTA02 Hardware]]
+[[Category:Used chip]]
