--- a/Neo_FreeRunner_Hardware.mw
+++ b/Neo_FreeRunner_Hardware.mw
@@ -56,102 +56,7 @@ Image:SimpleComponentDiagram.jpg|Simplified Hardware Component Diagram
 * 110 +/- 5 g (4 ounces) without battery <br>
 
 == Main components ==
-
-{|
-|-
-! style="width:250px" | Component 
-! Chip or Info
-|-
-| ''' Main Components '''
-|
-|- 
-| Processor
-| [[Samsung S3C2442B B54]]
-|-
-| Power Management
-| [[NXP PCF50633]] 04 N3
-|-
-| Flash
-| 
-|-
-| &nbsp;&nbsp; NAND Flash
-| 256MB into [[Samsung S3C2442B B54]]
-|-
-| &nbsp;&nbsp; NOR Flash
-| 16MBit [[ST M58WR016KB706E]]
-|-
-| style='vertical-align:top' |&nbsp;&nbsp; SDRAM
-| 
-*64MB integrated into the [[Samsung S3C2442B B54]]
-*64MB from the [[Samsung K4M51323PC]]
-*Total of 128MB
-|-
-| GSM + GPRS modem
-| Texas Instruments Calypso based, probably [[TI Calypso D751992AZHH]].
-|-
-| GPS + AGPS 
-| [[u-blox ANTARIS 4 ATR0635]] chip
-|-
-| Accelerometers
-| Two [[ST LIS302DL]]
-|-
-| Graphics/3D Acceleration
-| [[Smedia Glamo 3362]]
-|-
-| microSD 
-| Supported trought the [[Smedia Glamo 3362]]
-|-
-| LCD
-|
-|-
-| &nbsp;&nbsp; LCD Module (LCM) 
-| [[TPO TD028TTEC1]] module
-|-
-| &nbsp;&nbsp; Touch Screen
-| More info, see [[TPO TD028TTEC1]]
-|-
-| Bluetooth
-|
-|-
-| &nbsp;&nbsp; Bluetooth Module
-| [[Delta DFBM-CS320 Class2 Module]]
-|-
-| &nbsp;&nbsp; Bluetooth Audio 
-| This one is wired via PCM bus from the CSR Bluetooth chip to the Wolfson codec ([[WM8753]]).<br>
-|-
-| WiFi Module
-| [[Accton_WM3236AQ]]
-|-
-| style='vertical-align:top' | Vibrator
-|
-* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-vibrator.patch
-* Connected to: S3C2442 GPIO
-|-
-| USB
-| [[Samsung S3C2442B B54]]
-|-
-| style='vertical-align:top' | I2C Devices
-| I2C is a simple communication standard intended to move small amounts of data a few inches between chips.
-Please see [[I2C | Neo I2C Devices]] for more information & a list of devices & the addresses currently in use & documented for the Neo1973.<br>
-|-
-| Audio
-| See also: [[Neo1973 Audio Subsystem]]
-|-
-| &nbsp;&nbsp; Wolfson Codec
-|[[WM8753]]
-|- 
-| &nbsp;&nbsp; Mono Amplifier
-| [[LM4853]]
-|- 
-| style='vertical-align:top' | &nbsp;&nbsp; Analog wired Headset
-| [[Neo FreeRunner Analog wired Headset]] 
-|- 
-| style='vertical-align:top' | Buttons 
-| [[Neo1973 Power Button|The Power Button]] <br> [[Neo1973 AUX Button|The "Aux" button]]
-|- 
-| style='vertical-align:top' | Case
-| [[Neo FreeRunner case]]
-|}
+{{Category:GTA02_Hardware}}
 
 =Accessory=
 
