--- a/Getting_Started_with_your_Neo_FreeRunner%2Fes.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner%2Fes.mw
@@ -389,5 +389,5 @@ Para buscar en este wiki a través de Google, utiliza los siguiente terminos de 
  <Términos de búsqueda> site:http://wiki.openmoko.org/wiki/
 
 
-[[Category:GTA02 Hardware]]
-[[Category:Guides]]
+[[Category:GTA02 Hardware/es]]
+[[Category:Guides/es]]
