*Empty MediaWiki Message*

--- a/Manuals%2FNeo_FreeRunner%2Ffr.mw
+++ b/Manuals%2FNeo_FreeRunner%2Ffr.mw
@@ -253,9 +253,9 @@ La ligne ajoutée ci-dessus vous permet d'ouvrir une connection ssh sur OpenMoko
 
 ==Annexe==
 Si vous souhaitez en savoir plus sur le FreeRunner, vous pouvez obtenir davantage d'information sur les sujets qui suivent:
-* [[GTA02 Openness]]
-* [[Neo FreeRunner]]
-* [[Neo FreeRunner GTA02 Hardware]]
-* [[FreeRunner/Buttons and LEDs]]
+* [[GTA02 Openness/fr]]
+* [[Neo FreeRunner/fr]]
+* [[Neo FreeRunner GTA02 Hardware/fr]]
+* [[FreeRunner/Buttons and LEDs/fr]]
 
 [[Category:GTA02 Hardware]]
