--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -569,4 +569,4 @@ Per cercare con Google su questo wiki scrivere quanto segue:
 
 Un ottimo tool per cercare nelle Openmoko mailing list è http://openmoko.markmail.org/ .
 
-[[Category:GTA02 Hardware]]
+[[Category:GTA02 Hardware/it]]
