*Empty MediaWiki Message*

--- a/Manuals%2FNeo_FreeRunner%2Fnl.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fnl.mw
@@ -140,4 +140,4 @@ Press and hold the AUX button, then press and hold the Power button. Then, relea
 
 Wanneer het scherm is gelocked (schermbeveiliging, zie je een Matrix-style groene achtergrond met het Openmoko symbool onderin in het scherm met daarnaast een slotje aan de rechterkant.  Sleep het Openmoko symbool naar de bovenkant van het scherm toe, of te wel naar het open slotje bovenin, en je scherm is unlocked.
 
-[[Category:GTA02 Hardware]]
+[[Category:GTA02 Hardware/nl]]
