*Empty MediaWiki Message*

--- a/Manuals%2FNeo_FreeRunner%2Fru.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fru.mw
@@ -394,5 +394,5 @@ R: Это может быть исправлено изменением файл
 
  <предмет поиска> site:http://wiki.openmoko.org/wiki/
 
-[[Category:GTA02 Hardware]]
-[[Category:Guides]]
+[[Category:GTA02 Hardware/ru]]
+[[Category:Guides/ru]]
