/* 080817 Group Sale in Taiwan */

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -3016,22 +3016,7 @@ We are already 6, so 4 remaining. Contact me at : jec at jesc dot ch
 ==== 080817 Group Sale in Taiwan ====
 Host: Mac Lin (mkl23@hotmail.com)
 
-Schedule
-
 8/17: last day to gather order
-
-I'll send request to openmoko, then we should know an exact figure (in NTD).
-
-payment: 1 week after the exact figure is known, paid by bank remittance (I'll mail my account latter)
-
-* If the number of phones is over but not exactly 10s (some of the phone couldn't have 10-pack price), I would like all of phones share the discount.
-* But the order does matter, since there might be no traveler’s pouch and headset for these not in 10-pack group.
-
-
-How to take:
-*face to face: in HsinChu
-*mail
-
 
 {| border="1"
 | Item
@@ -3042,15 +3027,18 @@ How to take:
 |-
 | DBoard (*)
 | 2500
-|-
-
-|Postage(OM to me)
-| 
-|-
-|Postage (I deliver to you)
-| 
 |}
-* present only if one have ordered DBoard
+
+8/26: last day to finish payment.
+
+payment: paid by bank remittance 
+國泰世華(013)　04250XXXXXX8
+
+
+How to take:
+*face to face: in HsinChu
+*mail
+
 
 -------------
 
