--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -85,7 +85,8 @@ after that you will need to restart the framework (kill the process and start it
 * Set of menu icon related to the neo (Icons in use are from the Gnome project, enlightenment project and [http://wiki.openmoko.org/wiki/User:Nenadgrujicic Nenadgrujicic]. ReMoko icon made by [http://wiki.openmoko.org/wiki/User:Fradeve11 Fradeve11])
 
 ===ScreenShots===
-[[Image:cenas.png]]
+[[Image:menu.png]]
+[[Image:mouse_profile.png]]
 
 ==Ideas for the application name==
 
