--- a/ReMoko.mw
+++ b/ReMoko.mw
@@ -86,7 +86,11 @@ after that you will need to restart the framework (kill the process and start it
 
 ===ScreenShots===
 *Remoko Menu <br/>[[Image:Remoko_menu.jpg]]
-[[Image:mouse_profile.png]]
+*Remoko Mouse profile <br/>[[Image:remoko_mouse.jpg]]
+*Remoko Presentation menu <br/> [[Image:remoko_presentation_menu.jpg]]
+*Remoko Multimedia menu <br/> [[Image:remoko_multimedia_menu.jpg]]
+*Remoko Multimedia menu configurations <br/> [[Image: remoko_multimedia_conf.jpg]]
+*Remoko About Screen <br/> [[Image:remoko_about.jpg]]
 
 ==Ideas for the application name==
 
