--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -2122,10 +2122,17 @@ Due to common customs problems we created google group to discuss how to get tha
 | 1(P3.8)
 | 1(P3.8)
 | 1(P3.8)
+|
+|-
+| 26. [[Special:Emailuser/atomlab|atomlab]]
+|  Zaitsev Nikolay
+| 1(P4.6)
+|
+|
 |-
 |Total number:
 |
-| 21(28?)
+| 22(28?)
 | 5(7?)
 | 13(15?)
 |}
