--- a/Zagg_Protection_Discount_Number.mw
+++ b/Zagg_Protection_Discount_Number.mw
@@ -10,6 +10,8 @@ Here's the list
 * l3zm27      (end date : 23 August 2008)
 * rkck9p      (end date : 23 August 2008)
 * 587jb5      (end date : 24 August 2008)
+* 9bwprs      (end date : 30 August 2008)
+* nxrenu      (end date : 30 August 2008)
 * kejt5k      (end date : 1 September 2008)
 * leupg3      (end date : 1 September 2008)
 * dp2y9p      (end date : 6 September 2008)
