--- a/Zagg_Protection_Discount_Number.mw
+++ b/Zagg_Protection_Discount_Number.mw
@@ -18,6 +18,8 @@ Here's the list
 * 6s35cl      (end date : 6 September 2008)
 * mjlvt2      (end date : 6 September 2008)
 * 6meza8      (end date : 6 September 2008)
+* 4qvkb5      (end date : 18 September 2008)
+* y2bbuw      (end date : 18 September 2008)
 
 Also, a 20%-off code . Can be reused.
 
