--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -1553,10 +1553,10 @@ Status 2/10
 
 === Sør-Trøndelag ===
 ==== Trondheim ====
-Status 15/20
+Status 15/15
 
-*[[User:andy000|Andreas Kalvå]] [mailto:andy@samfundet.no andy@samfundet.no]
-Send mail om du er interessert.
+*[[User:andy000|Andreas Kalvå]]
+Vi satte frist til den 18. august.
 
 === Østlandet ===
 ==== Oslo, Akershus, Buskerud, Vestfold ====
