--- a/CAD_models.mw
+++ b/CAD_models.mw
@@ -2,8 +2,7 @@ Openmoko has released the CAD files for the [[Neo 1973]] and [[Neo FreeRunner]].
 
 We welcome your assistance in providing other formats. If you are able to convert CAD files from Pro/E format to other formats, please contact [mailto:michael@openmoko.org]. We are especially interested in the DXF format and in images rendered from these files.
 
-* [http://downloads.openmoko.org/CAD/NeoFreerunner_ProE.zip The original Pro/E (.asm/.prt) format]
-* [http://downloads.openmoko.org/CAD/ Browse CAD directory]
+[http://downloads.openmoko.org/CAD/ Browse CAD directory]
 
 [[Category:Neo1973_Hardware]]
 [[Category:User Interfaces]]
