--- a/CAD_models.mw
+++ b/CAD_models.mw
@@ -4,6 +4,4 @@ We welcome your assistance in providing other formats. If you are able to conver
 
 [http://downloads.openmoko.org/CAD/ Browse CAD directory]
 
-[[Category:Neo1973_Hardware]]
-[[Category:User Interfaces]]
-[[Category:Information]]
+[[Category:Neo1973 Hardware]]
