/* Some SIMs Don't Work */

--- a/Neo_FreeRunner_Hardware_Issues.mw
+++ b/Neo_FreeRunner_Hardware_Issues.mw
@@ -64,7 +64,7 @@ See also:
 
 Affects: Only a subset of users (details unknown).
 
-Status: Under investigation. Please add your information to [[FreeRunner_unable_to_work_with_3G_SIM_cards]]
+Status: Under investigation. Please add your information to [[FreeRunner_unable_to_work_with_3G_SIM_cards]] or [[GSM network registration]]
 
 Workarounds: It may be possible to obtain a different model of SIM from your GSM carrier.
 
