*Empty MediaWiki Message*

--- a/Openmoko_supported_devices.mw
+++ b/Openmoko_supported_devices.mw
@@ -1,4 +1,4 @@
-[[Openmoko]] is meant to run on various devices. The following hardware platforms are at least partly supported.
+'''Openmoko''' is meant to run on various devices. The following hardware platforms are at least partly supported.
 
 * [[Neo1973|Neo 1973]] and [[Neo FreeRunner|Neo FreeRunner]] Best support, reference platforms.
 
@@ -21,8 +21,6 @@
 * [http://www.etencorp.com/products/Communication/G500.php E-TEN G500] dialler works but some [http://article.gmane.org/gmane.comp.handhelds.openmoko.community/9306  screen res issues as yet]
 
 * HP iPAQ hx4700 - [http://dominion.kabel.utwente.nl/koen/cms/openmoko-running-on-an-ipaq details]
-
-
 
 == See also ==
 
