--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -1,11 +1,10 @@
 {{Gta02menu}}
 
-== Frequently Asked Questions ==
-=== FreeRunner known hardware related issues ===
+== FreeRunner known hardware related issues ==
 
 There is collection of FreeRunner hardware issue wiki page [[Freerunner_Hardware_Issues]] , could help you quickly know if you bump into same problem and the possible way to solve some of issues.
 
-===Booting===
+==Booting==
 '''Q: I can't boot Neo with charger?'''  
 
 '''A:'''
@@ -54,11 +53,11 @@ This is what I need to run as root and the everything works fine:
 
 3. u-boot using: grep  Bootloader /dev/mtdblock0
 
-=== Battery ===
-==== What is the expected battery life? ====
+== Battery ==
+=== What is the expected battery life? ===
 See [[Neo FreeRunner (GTA02) Battery#Notes_about_expected_battery_life]] and more battery information in [[Neo_FreeRunner_(GTA02)_Battery]]
 
-=== USB ===
+== USB ==
 '''Q:''' How do I connect an USB memory-stick etc?
 
 '''A:''' This requires an adapter Mini-B 5-pole => Type A jack or an adapter jack => jack. [http://wiki.openmoko.org/wiki/Host_Mode see here]
@@ -69,9 +68,9 @@ See [[Neo FreeRunner (GTA02) Battery#Notes_about_expected_battery_life]] and mor
 <br >
 It should work if one Neo is set to Host mode and the other one set to Device mode. One Neo could give power to the USB-port it the other Neo's battery is low. ''(I have to verify this)''
 
-=== GSM ===
+== GSM ==
 
-==== SIM compatibility ====
+=== SIM compatibility ===
 '''Q:'''Sim card is not working, how do I run diagnostics?
 
 '''A:'''
@@ -79,7 +78,7 @@ Here is the "how to" check.
 
 Follow [[Manually_using_GSM]] until you get an OK prompt. More detalied documenation please refer [[FreeRunner_unable_to_work_with_3G_SIM_cards]] and [[Carriers]].
 
-==== GSM/GPRS information ====
+=== GSM/GPRS information ===
 
 Following page contain very useful information:
 
@@ -91,7 +90,7 @@ Following page contain very useful information:
 
 * [http://freeyourphone.de/portal_v1/viewtopic.php?f=21&t=295#p2956 Useful script for GPRS]
 
-=== GPS ===
+== GPS ==
 
 '''Q: How do I get the GPS working?''' 
 
@@ -101,55 +100,55 @@ Following page contain very useful information:
 
 '''A: '''See [[GPS Problems]].
 
-=== Wi-Fi ===
+== Wi-Fi ==
 
 '''Q: How do I get the wlan working? '''
 
 '''A: ''' See [[GTA02 WLAN]]
 
-=== Bluetooth ===
+== Bluetooth ==
 
 '''Q: How do I get the Bluetooth working? '''
 
 '''A: ''' See [[Manually_using_Bluetooth]]
 
-=== Sysfs function===
+== Sysfs function==
 
 '''Q: How do I get low level hardware related function, like power up device, dump register? '''
 
 '''A: ''' See [[GTA02_sysfs]]
 
-=== Display ===
+== Display ==
 
-==== Can it play VGA video? ====
+=== Can it play VGA video? ===
 
 No, it can do about 20 fps QVGA with software, and something beetween QVGA and VGA playing MPEG-4 using hardware (at resonable fps). Scaling is also done with GPU hardware.
 
-==== How to change the background picture of the root window? ====
+=== How to change the background picture of the root window? ===
 
 Look [http://wiki.openmoko.org/wiki/Today/2007.2#Adjust_UI_components_at_runtime here].
 
-=== Software ===
+== Software ==
 
-==== Does it support Java? ====
+=== Does it support Java? ===
 There is a [https://wiki.evolvis.org/jalimo/index.php/OpenMoko port of Jalimo] for Openmoko.
 
-==== Does it support Flash? So can I watch YouTube? ====
+=== Does it support Flash? So can I watch YouTube? ===
 
-==== Does it support Ruby ====
+=== Does it support Ruby ===
 
 Ruby 1.9 please refer http://blog.sparkymat.net/2008/08/10/ruby-19-on-openmoko/
 Ruby 1.8.6 please refer http://blog.wolfman.com/articles/2008/08/10/ruby-1-8-6-on-openmoko-freerunner
 
-==== How can I type a '/' in the software keyboard? ====
+=== How can I type a '/' in the software keyboard? ===
 
 See [[Switching Keyboards]]
 
-==== How do I get a qwerty software keyboard?====
+=== How do I get a qwerty software keyboard?===
 
 See [[Switching Keyboards]]
 
-====How to use an external USB or Bluetooth keyboard with ing FreeRunner ? ====
+===How to use an external USB or Bluetooth keyboard with ing FreeRunner ? ===
 
 just run:
  echo "host" > /sys/devices/platform/s3c2410-ohci/usb_mode
