--- a/GSM_network_registration.mw
+++ b/GSM_network_registration.mw
@@ -90,7 +90,7 @@ We'd like to know the real network registration status by our NEO devices in the
 |-
 | [[User:robolange | Robert Lange]]   || Philadelphia, PA, USA || AT&T || obtained with AT&T prepaid phone in July 2008; model 71234 O 4022 || GTA02Bv5 || Moko8 || Yes || with probability about 0.2, will register immediately upon boot, otherwise you have to reboot and try your luck again; seems to be location independent || File not found
 |-
-| KB || Denmark || TDC || From TDC business in 2007 || GTA02Bv5 || Moko8 || ¿What? || Works with other sim cards, but not with the 2 TDC business sim cards i tried (CME error 10) || File not found
+| KB || Denmark || TDC || From TDC business in 2007 (64K43) || GTA02Bv5 || Moko8 || ¿What? || Works with other sim cards, but not with the 2 TDC business sim cards i tried (CME error 10) || File not found
 |}
 
 [[Category:Hardware]]
