--- a/Distributions.mw
+++ b/Distributions.mw
@@ -64,6 +64,7 @@ The applications installed are intended as test-tools for the new middleware and
 * [http://trac.freesmartphone.org:8000/trac-example  Development tracker]
 * [http://downloads.openmoko.org/framework/milestone2/ Download milestone 2]
 * [http://freesmartphone.org freesmartphone.org]
+* [http://shr.bearstech.com/ fso-testing and fso-unstable images and feeds] (maintained by Rod Whitby, MokoMakefile author)
 
 == Openmoko Community driven release targets ==
 
