--- a/Neo1973_compatible_cellphone_providers.mw
+++ b/Neo1973_compatible_cellphone_providers.mw
@@ -28,6 +28,7 @@ There is also a [[Carriers]] page that should be merged with this section.
 * [http://www.one.at ONE]
 * [http://www.t-mobile.at T-Mobile]
 * [http://www.telering.at/ Tele.Ring]
+* [http://www.yesss.at/ Yesss]
 * Some other like [http://www.bob.at BOB] being sold in Supermarkets
 
 == Belgium ==
