Delete obsolete stuff

--- a/Community_Updates.mw
+++ b/Community_Updates.mw
@@ -1,14 +1,10 @@
 {{Note|as FreeRunners are now shipping, it seems less likely that Community Updates will be posted in the form they used to be (as they mostly related to the expected release dates). But Wolfgang Spraul has begun with the [[Weekly Engineering News]].}}
 
 Even though Openmoko strives to keep the community informed of the development progress, Openmoko does not provide delivery dates. Instead, Openmoko reports the project status here and on the [http://lists.openmoko.org/pipermail/community/ openmoko-community mailing list]. Major updates are also sent to the [http://lists.openmoko.org/pipermail/announce/ announce mailing list].
+Developers will wish to follow the progress on the [http://lists.openmoko.org/pipermail/openmoko-kernel/ openmoko-kernel mailing list] and the [http://lists.openmoko.org/pipermail/devel/ devel mailing list].
 
 You may also wish to take a look at the [http://wiki.openmoko.org/wiki/Neo_FreeRunner_(GTA02)_FAQ Neo Freerunner FAQ].
 
-Interested developers may additionally wish to follow the progress on the [http://lists.openmoko.org/pipermail/openmoko-kernel/ openmoko-kernel mailing list] and the [http://lists.openmoko.org/pipermail/devel/ devel mailing list] (all mailing lists are available [http://lists.openmoko.org/pipermail/ here]).
-
-You are invited to add questions or topics you think should be included in the Community Updates by emailing community@lists.openmoko.org or by editing section 2 of this wiki page.
-
-See [[Community_Updates#Previous_Community_Updates | below]] for a list of previous updates.
 
 ==Previous Community Updates==
 *[[September 28, 2007 Community Update]]
