--- a/Automatic_emulation_in_Ubuntu.mw
+++ b/Automatic_emulation_in_Ubuntu.mw
@@ -148,7 +148,7 @@ If you have any problems, just add it here<br>
 
 OS: Ubuntu 8.05
 I run the following sequence of commands to run my QEMU 
-
+<pre>
 $ svn checkout https://svn.openmoko.org/trunk/src/host/qemu-neo1973
 $ cd qemu-neo1973
 $ sudo aptitude install gcc-3.4 libsdl1.2-dev lynx netpbm
@@ -157,10 +157,11 @@ $ make
 $ openmoko/download.sh
 $ openmoko/flash.sh
 $ arm-softmmu/qemu-system-arm -M gta01 -m 130 -mtdblock openmoko/openmoko-flash.image -kernel openmoko/openmoko-kernel.bin -usb -show-cursor<br>
-
-Emulator appears with Boot menu.<br>
-While Booting it get hanged out with the following errors<br>
-_______________________Errors or Emulator Screen_______________<br>
+</pre>
+Emulator appears with Boot menu.<br/>
+While Booting it get hanged out with the following errors
+<pre>
+_______________________Errors or Emulator Screen_______________
 sc32410-sdi sc32410-sdi : CMD[FAIL(-100)] #2 op:CMD8
 error: command timeout
 ...
@@ -172,7 +173,7 @@ Freeing init memory: 128kb
 JFFS2 warning: (227) jffs2_do_read_inode_internal: Truncating into #1111 to 71415
 56 bytes failed because it only had 2510848 bytes to start with <br>
 
-_______________Errors on Terminal_______________<br>
+_______________Errors on Terminal_______________
 qasim@qasim-desktop:~/openmoko/qemu-neo1973$ arm-softmmu/qemu-system-arm -M gta01 -m 130 -mtdblock openmoko/openmoko-flash.image -kernel openmoko/openmoko-kernel.bin -usb -show-cursor
 neo_gsm_switch: GSM disabled.
 pcf_write: charging in Qualification Mode.
@@ -195,14 +196,15 @@ s3c_mmci_writew: Bad register 0x38
 s3c_mmci_writew: Bad register 0x38
 s3c_mmci_writew: Bad register 0x38
 s3c_mmci_writew: Bad register 0x38
-neo_bl_intensity: LCD Backlight now at 0/64.<br>
-________________________________________________________________<br>
+neo_bl_intensity: LCD Backlight now at 0/64.
+_____________________________________________
+</pre>
 Does anyone has any idea how to fix this up?
 
 
 
 After issuing the command 'make qemu' in Gutsy, the installation eventually borks with
-
+<pre>
     make[2]: Leaving directory `/usr/local/src/openmoko/build/qemu/arm-softmmu'
     make[1]: Leaving directory `/usr/local/src/openmoko/build/qemu'
     [ -e images/openmoko ] || mkdir -p images/openmoko
@@ -211,7 +213,7 @@ After issuing the command 'make qemu' in Gutsy, the installation eventually bork
         Retrieving available builds list...
         Kernel is... not found
     make: *** [download-images] Error 255
-
+</pre>
 [[User:BioGeek|BioGeek]] 02:03, 27 March 2008 (CET)
 
 Do you still have the problem?
@@ -271,29 +273,6 @@ When I try to download .jffs2 file, it's write "404. File is not found"
 This is not look like as Openmoko on screens:
 
 [[Image:Openmoko2.png|thumb|Wrong image?|left]]
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 [[User:Robotex|Robotex]] 02:43, 7 August 2008 (UTC)
 
