--- a/Automatic_emulation_in_Ubuntu.mw
+++ b/Automatic_emulation_in_Ubuntu.mw
@@ -273,7 +273,7 @@ When I try to download .jffs2 file, it's write "404. File is not found"
 This is not look like as Openmoko on screens:
 
 [[Image:Openmoko2.png|thumb|Wrong image?|left]]
-
+<br style="clear:both"/>
 [[User:Robotex|Robotex]] 02:43, 7 August 2008 (UTC)
 
 [[Category:Technical]]
