--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -56,6 +56,10 @@ This is what I need to run as root and the everything works fine:
 == Battery ==
 === What is the expected battery life? ===
 See [[Neo FreeRunner (GTA02) Battery#Notes_about_expected_battery_life]] and more battery information in [[Neo_FreeRunner_(GTA02)_Battery]]
+=== How do I enable fast charge mode for anything but the official mains charger? ===
+???
+==== Without soldering ====
+???
 
 == USB ==
 '''Q:''' How do I connect an USB memory-stick etc?
