Update install and map info

--- a/Navit.mw
+++ b/Navit.mw
@@ -20,9 +20,7 @@ Thanks to [[User:Alessandro | Alessandro]], stefan_schmidt, cp15 and all Navit d
 ==Setting up Navit==
 
 I got navit set up and configured to the point where it follows me on the map.  It doesn't have street names or any other information, just the map and the cursor showing the location and direction.  Here's what I did:
-* Install navit ipkg on NEO
- opkg install http://www.mikeasoft.com/~mike/ipk/armv4t/navit_0.0.4-r0_armv4t.ipk
-* If you have problems with the above version of Navit aborting on startup with an error like <code>street_get_data: assertion failed: (count < maxcount)</code> when using preloaded map data, then it's likely related to this: http://navit.svn.sourceforge.net/viewvc/navit?view=rev&revision=1169.  The following package has the fix (for some reason it's necessary to wget then install, instead of pointing opkg at the URL):
+* Install navit ipkg on NEO (for some reason it's necessary to wget then install, instead of pointing opkg at the URL):
  wget http://www.acoveo.org/navit_0.1.0+svnrev1255-r0_armv4t.ipk
  opkg install --force-depends navit_0.1.0+svnrev1255-r0_armv4t.ipk
 * Or roll your own from svn using the toolchain (having checked out trunk in the navit directory, and assuming you have written navit_control):
@@ -31,6 +29,8 @@ I got navit set up and configured to the point where it follows me on the map.  
  om-make-ipkg navit navit_control
 * Set up your local maps
 ** Openstreetmap - follow directions at http://wiki.navit-project.org/index.php/OpenStreetMaps
+*** There are some up-to-date maps already prepared, e.g.:
+ wget -O germany.bin http://maps.navit-project.org/api/map/?bbox=5.185546875,46.845703125,15.46875,55.634765625
 ** Here's an example of what I did to get the maps for the area around Seattle, Wa where I live:
 *** figured out map coordinates using http://informationfreeway.org/?lat=47.520270037501454&lon=-122.20130713167327&zoom=9&layers=B000F000
 *** Downloaded 4 regions from openstreetmaps ([[Navit#Script_to_download_OSM_maps|see below]] for a script to do this for you automatically for largish areas)
