--- a/Navit.mw
+++ b/Navit.mw
@@ -65,9 +65,9 @@ They are now displayed on OpenMoko using the CVS version of Navit (20071217).
 Easier using the CVS version (20071217). 
 
 === Route > Destination ===
-The Route > Destination menu item crashes the software (20071217 and 0.04). 
+The Route > Destination menu item crashes the software (20071217 and 0.04, but fixed in 0.1.0+svnrev1255). 
 
-A current fix is to set the LANG variable before calling navit. For example:
+A workaround is to set the LANG variable before calling navit. For example:
 
  LANG=fr_FR.UTF-8 navit
 
