--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -75,6 +75,8 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | CSR Unifi UF1052 (WIFI)|| NA || NA || NA|| [http://www.csr.com/downloads/CS-118446-TOP1%20UF1052.pdf]
 |-
+| Ralink RT2800 series (WIFI) || NA || NA || NA || [http://www.ralink.com.tw/Home/Products/Applications/MobileWorld.html] only have PCIe & USB interface
+|-
 |}
 
 '''Application Processor&MCU'''
