--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -27,7 +27,7 @@ Requisiti d'istallazione:
 
 === Preparare la scheda SD ===
 
-See the [[Booting from SD#Prepare the SD card| Preparing the SD Card]] section of the [[Booting from SD]] page for partitioning and formatting instructions.  After you complete the "Formatting the SD Card" steps, return here and execute the following:
+Controlla la [[Booting from SD#Prepare the SD card| Preparing the SD Card]] sezione della pagina [[Booting from SD]] per le istruzioni sul partizionamento e la formattazione. Dopo che avrai completato i passi per la "Formattazione della scheda SD", ritorna qui ed esegui i seguenti comandi:
 
   mount /dev/mmcblk0p1 /media/card
   mkdir /media/card/boot
@@ -35,7 +35,7 @@ See the [[Booting from SD#Prepare the SD card| Preparing the SD Card]] section o
   mkdir /media/mmcblk0p2
   mount /dev/mmcblk0p2 /media/mmcblk0p2
 
-This will set you up properly for the installation of the root filesystem and the kernel in the steps below.
+Questi ti forniranno correttamente i requisiti per l'installazione del root filesystem e del kernel come di seguito indicato.
 
 === Installing Qtopia ===
 
