/* Opzione 2: Dual-Boot tra Qtopia e la 2007.2 (Qtopia caricato dalla card MicroSD) */

--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -17,7 +17,7 @@ Puoi trovare tutte le immagini di Qtopia [http://www.qtopia.net/modules/mydownlo
 
 Scarica l'immagine sopra indicata e segui queste istruzioni: [[Flashing the Neo FreeRunner]]
 
-== Opzione 2: Dual-Boot tra Qtopia e la 2007.2 (Qtopia caricato dalla card MicroSD) ==
+== Opzione 2: Dual-Boot tra Qtopia e la 2007.2 (Qtopia caricato dalla scheda MicroSD) ==
 
 Requisiti d'istallazione: 
 
