--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -77,6 +77,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | Ralink RT2800 series (WIFI) || NA || NA || NA || Only have PCIe & USB interface. See [http://www.ralink.com.tw/Home/Products/Applications/MobileWorld.html Ralink's website]
 |-
+| Airoha AL223X series (WIFI) || NA || NA || NA || See [http://www.airoha.com.tw/AL2236.htm Airoha's website]
 |}
 
 '''Application Processor&MCU'''
