--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -37,15 +37,15 @@ Controlla la [[Booting from SD#Prepare the SD card| Preparing the SD Card]] sezi
 
 Questi ti forniranno correttamente i requisiti per l'installazione del root filesystem e del kernel come di seguito indicato.
 
-=== Installing Qtopia ===
+=== Istallare Qtopia ===
 
-==== Unpacking the Qtopia Root Filesystem Image ====
+==== Estrarre l'immagine del root filesystem di Qtopia ====
 
-Download the Qtopia FLASH image from [[Latest Images#Qtopia image from qtopia.net]] to your Linux box and extract its contents:
+Scarica l'immagine FLASH di Qtopia da [[Latest Images#Qtopia image from qtopia.net]] sul tuo computer Linux ed estrai il suo contenuto:
 
   tar xzf qtopia-4.3.2-gta02-flash-*.tgz
 
-You should now have two files: 
+Dovresti trovarti con due files: 
 #uImage-2.6.24+git18+9c058ff0d2641df3c36fc3300acb72078d2c41d4-r0-om-gta02.bin
 #qtopia-4.3.2-gta02-rootfs-07172049.jffs2  
 Now extract the root file system from the jffs2 using the commands found [[Userspace root image#Mounting the JFFS2 image on a loop back device (Block Memory MTD Emulation) |here]].
