--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -78,6 +78,11 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 | Ralink RT2800 series (WIFI) || NA || NA || NA || Only have PCIe & USB interface. See [http://www.ralink.com.tw/Home/Products/Applications/MobileWorld.html Ralink's website]
 |-
 | Airoha AL223X series (WIFI) || NA || NA || NA || See [http://www.airoha.com.tw/AL2236.htm Airoha's website]
+|-
+| ST STLC4560 (WIFI) || NA || NA || NA || see [http://www.st.com/stonline/products/literature/bd/14302/stlc4560.htm ST's website]
+|-
+| ST STLC4550 (WIFI & BT coexistence) || NA || NA || NA || see [http://www.st.com/stonline/products/families/communication/wscomm/wlan/stlc4550.htm ST's website]
+|-
 |}
 
 '''Application Processor&MCU'''
