--- a/Distributions.mw
+++ b/Distributions.mw
@@ -164,7 +164,7 @@ Debian Linux, the whole distribution, on a mobile phone.
 |-
 | [[Python]] || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| [[Mono]] || ? || ? || ? || ? || ? || ? 
+| [[Mono]] || style="background:lightgreen;" | Yes(1) || ? || style="background:lightgreen;" | Yes(1) || ? || ? || ? 
 |}
 
 
