*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_London.mw
+++ b/Openmoko_Local_Groups:_London.mw
@@ -103,9 +103,14 @@ Beer and Neo anyone?
 |User, Developer 
 |London
 |Freerunner
+|-
+|[[User:Vortex|Vortex]]
+|C, toolchains, distributions
+| mesh networking, service discovery, wifi, bluetooth, scanning, gps
+|London
+|Freerunner
+|-
 |}
-
-
 Key:
  [[Image: Moko.jpg]] = GTA01
  [[Image: MokoBox.jpg]] = Debug board
