--- a/Distributions.mw
+++ b/Distributions.mw
@@ -123,7 +123,7 @@ Debian Linux, the whole distribution, on a mobile phone.
 |-
 | Finger friendly || Partially || Partially || Partially || N/A || style="background:lightgreen;" | Yes || No
 |-
-| Accelerometer || No || No || No || N/A || No || No
+| Accelerometer || No || No || style="background:lightgreen;" | Yes[[Gestures|(1)]]  || N/A || No || No
 |-
 |}
 
