--- a/Distributions.mw
+++ b/Distributions.mw
@@ -102,7 +102,7 @@ Debian Linux, the whole distribution, on a mobile phone.
 |-
 | SMS || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| GPRS || Not through UI || Not through UI || Not through UI || N/A || No (3) || style="background:lightgreen;" | Yes
+| [[GPRS]] || Not through UI || Not through UI || Not through UI || N/A || No (3) || style="background:lightgreen;" | Yes
 |-
 | WiFi || style="background:lightgreen;" | Yes || Not through UI || style="background:lightgreen;" | Yes (*) || N/A || style="background:lightgreen;" | Yes ||style="background:lightgreen;" | Yes
 |-
