--- a/Distributions.mw
+++ b/Distributions.mw
@@ -142,9 +142,9 @@ Debian Linux, the whole distribution, on a mobile phone.
 |-
 | Web Browser || style="background:lightgreen;" | Yes (1) || ? || style="background:lightgreen;" | Yes (1) || ? || No || style="background:lightgreen;" | Yes
 |-
-| Mail Client || ? || ? || ? || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
+| Mail Client || ? || ? || style="background:lightgreen;" | Yes || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
 |-
-| XMPP Client || style="background:lightgreen;" | Yes (1) || ? || ? || ? || No || style="background:lightgreen;" | Yes
+| XMPP Client || style="background:lightgreen;" | Yes (1) || ? || style="background:lightgreen;" | Yes [[IM#Implementation_Recommendations|(1)]] || ? || No || style="background:lightgreen;" | Yes
 |-
 | Media Player || ? || ? || ? || ? || ? || ? 
 |-
