/* Some APN names for reference */

--- a/Manually_using_GPRS.mw
+++ b/Manually_using_GPRS.mw
@@ -241,6 +241,8 @@ fido
 |-
 | Canada || Rogers || Any, behind NAT || internet.com || wapuser1/wap || nameserver 207.181.101.4
 |-
+| Denmark || Telmore || || wap || must be empty ||
+|-
 | Estonia || Elisa || Any, behind NAT || internet || ||
 |-
 | Estonia || EMT || Any, behind NAT || internet.emt.ee || ||
