--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -105,6 +105,14 @@ http://home.comcast.net/~dmilbert/softs/ant2rin.htm
 
 GPX would accommodate everything we need but it's ASCII XML and that means 1/2 the file is just XML formatting. It might be possible to used tokenized GPX to make it more compact.
 
+== More features ==
+
+All I can think of at the moment is rangefinders. I am sure there are others.
+
+=== Laser rangefinder ===
+
+There is another common situtaion where people use a laser rangefinder in conjunction with GPS, to get the location of an object that is not reachable (for example a boat) or a tree trunk (under heavy canopy).
+
 == External links ==
 
 ESRI ArcPad http://www.tdsway.com/products/solo_field
