/* Download the DFU-util program */

--- a/Flashing_the_Neo_FreeRunner.mw
+++ b/Flashing_the_Neo_FreeRunner.mw
@@ -25,13 +25,15 @@ You may install this distribution on the microSD card, in order to [[Booting fro
 
 You will download that program on your desktop computer. It will allow you to connect to the FreeRunner through the USB cable and control its bootloader. That connection uses a special protocol which addresses the bootloader's interface, and differs from USB networking. There is a separate page to describe it in more detail: [[dfu-util]].
 
-'''Note:''' dfu-util seems to consistently fail with a "-62" error on 64-bit Linux. If you have access to a 32-bit machine, use it instead!
 
 '''MacOS X:''' [[MacOS_X#Graphical_Flashing_with_Openmoko_Flasher]]
 
 '''Linux:''' http://buildhost.openmoko.org/releases/Freerunner/dfu-util
 
 Make sure it is executable by setting the permissions with this command: chmod a+x dfu-util
+
+'''Note:''' dfu-util seems to consistently fail with a "-62" error on 64-bit Linux. If you have access to a 32-bit machine, use it instead!
+There are some ubuntu64 interpid packages which work just fine for me in hardy too. So you might try at your own risk: [http://packages.ubuntu.com/de/intrepid/dfu-util]
 
 '''Windows:''' http://projects.openmoko.org/frs/?group_id=166&release_id=162 
 
