*Empty MediaWiki Message*

--- a/Openmoko_supported_devices%2Fit.mw
+++ b/Openmoko_supported_devices%2Fit.mw
@@ -30,6 +30,6 @@
 
 {{Languages|Openmoko-supported hardware}}
 
-[[Category:Hardware ]]
-[[Category:Hardware Support| ]]
-[[Category:Documentation]]
+[[Category:Hardware/it]]
+[[Category:Hardware Support/it| ]]
+[[Category:Documentation/it]]
