--- a/HXD8.mw
+++ b/HXD8.mw
@@ -6,6 +6,8 @@ According to [http://lists.openmoko.org/pipermail/community/2007-October/011324.
 
 {{Speculations}}
 
+It has been confirmed that the DE is based off of the HXD8.
+
 ==Hardware==
 From the information found in the [https://svn.openmoko.org/trunk/doc/hardware/HXD8v011/ hardware documentation] and [https://svn.openmoko.org/trunk/src/target/kernel/patches/ kernel patches] parts of the subversion repositories, the following specifications can be predicted.
 
