*Empty MediaWiki Message*

--- a/HXD8.mw
+++ b/HXD8.mw
@@ -18,7 +18,7 @@ According to https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c2440-na
 ===Flash===
 According to a currently available hardware patch, the device supports 1 NAND Flash device of up to 4G. (uncertain about what kind of G that is. Could be 4Gb (which makes about 0,5GB), could be 4GB). 
 
-The DE has 3G of Flash.
+The DE has 3G of Flash, and there is no NOR.
 
 Some other patch implies that there is the possibility of connecting 3 NAND Flash chips.
 
