/* How to use an external USB or Bluetooth keyboard with ing FreeRunner ? */

--- a/Neo_FreeRunner_FAQ.mw
+++ b/Neo_FreeRunner_FAQ.mw
@@ -150,7 +150,7 @@ See [[Switching Keyboards]]
 
 See [[Switching Keyboards]]
 
-===How to use an external USB or Bluetooth keyboard with ing FreeRunner ? ===
+===How to use an external USB or Bluetooth keyboard with the FreeRunner ? ===
 
 just run:
  echo "host" > /sys/devices/platform/s3c2410-ohci/usb_mode
