--- a/Debian.mw
+++ b/Debian.mw
@@ -73,7 +73,7 @@ Unfortunately it depends on gpsd which conflicts with frameworkd in fso-framewor
 
  # apt-get install gpsd tangogps
   
-Edit <code>/etc/frameworkd.conf</code>.  In the section <code>[ogpsd]<code>, edit to read:
+Edit <code>/etc/frameworkd.conf</code>.  In the section <code>[ogpsd]</code>, edit to read:
 <pre>
 # path = /dev/ttySAC1
 path = /dev/null
