--- a/Debian.mw
+++ b/Debian.mw
@@ -100,9 +100,10 @@ Turns the GPS on.
 
 
 '''Issues:'''
-* The different daemons for the reading GPS data mean that both tangogps and the framework demo GPS application can't be configured to work at the same time.  Reboots are probably necessary when switching between them.
+* The different daemons for reading GPS data mean that both tangogps and the framework demo GPS application can't be configured to work at the same time.  Reboots are probably necessary when switching between them.
 ** Both gpsd and the framework publish GPS data through dbus, though with different interfaces.  This suggests a number of possible solutions.
 *** gpsd or the framework could implement the other's interface (along with their own).
+*** a translator could read one interface and emulate the other
 *** the framework could have an option to read data from gpsd.
 *** tangogps could be extended to read data from the framework.
 
