--- a/Debian.mw
+++ b/Debian.mw
@@ -4,6 +4,10 @@ There are official instructions on how to install Debian on http://wiki.debian.o
 Previous, partly now outdated information on how to install Debian manually has been moved to [[Manual Debian]].
 
 = System =
+== Password ==
+
+The default root password is blank.  You should change that as soon as you can.
+
 == Speeding up booting ==
 What's good for every linux booting is also good for our debian on the freerunner: booting in quiet mode. To do so by default just boot your Neo Freerunner in NOR-Flash and execute this configure-script: [http://paste.ubuntuusers.de/391456/ configure-uboot.sh].
 
