--- a/Debian.mw
+++ b/Debian.mw
@@ -88,7 +88,7 @@ path = /dev/null
 
  # dpkg-reconfigure gpsd
 
-* Start gpsd automatically no boot? Yes.
+* Start gpsd automatically on boot? Yes.
 * Device the GPS receiver is attached to: /dev/ttySAC1
 * Should gpsd handle attached USB GPS receivers automatically? Yes
 ** not certain what this answer should be
