--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -115,13 +115,15 @@ There is another common situtaion where people use a laser rangefinder in conjun
 
 == External links ==
 
-ESRI ArcPad http://www.tdsway.com/products/solo_field
-
 GPSd http://gpsd.berlios.de/
 
 GPX http://www.topografix.com/gpx.asp http://en.wikipedia.org/wiki/GPX_(data_transfer)
 
 RINEX specs ftp://ftp.unibe.ch/aiub/rinex/
+
+=== Commercial software ===
+
+ESRI ArcPad http://www.tdsway.com/products/solo_field
 
 TDS Solo Field http://www.tdsway.com/products/solo_field
 
