--- a/Carriers%2FATT.mw
+++ b/Carriers%2FATT.mw
@@ -65,6 +65,8 @@ for AT+COPS
 |-
 | 71234 || G  ||  3022 || blazing 3G fireball || usually registers/sends/receives instantly-- sometime needs a reboot and then registers. AT&T corporate suggested I go to a true AT&T store that sells iPhones, for the SIM that worked!
 |-
+| 71234 || G || 3022 || blazing 3G fireball ||  $15 ($30 with $15 instant rebates) GoPhone kit at RadioShack.  Pulled the sim out of the kit phone when I got home, stuck it in my Freerunner, and it worked.  SMS doesn't seem to be working though (nothing shows up in the messages app).
+|-
 | 71234 || O || 4022 || blazing 3G fireball || WalMart/RadioShack $18 Cingular Go phone package. This chip was also given with a contract plan. (Three confirmed working.)[17 July 08 confirmed 4th working w/Family 500 anytime]  
 |-
 | 71234 || O || 4022 || blazing 3G fireball || Two more confirmed working with FreeRunner.  Previous 4021 chip did not work properly.
