--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -119,6 +119,8 @@ GPSd http://gpsd.berlios.de/
 
 GPX http://www.topografix.com/gpx.asp http://en.wikipedia.org/wiki/GPX_(data_transfer)
 
+gypsy http://folks.o-hand.com/iain/gypsy/ GPS data multiplexer
+
 RINEX specs ftp://ftp.unibe.ch/aiub/rinex/
 
 === Commercial software ===
