/* Things to know */ add battery hot-swap directions for charging drained battery

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -99,6 +99,7 @@ The Media Player is basically useless due to the default theme. To install with 
 *Accelerometers have alpha support via [[Gestures]]
 
 *If you let the battery completely drain you will have problems booting it up. Plug it into the wall charger for a few hours and then plug it into your computer and press power.
+*BUT, '''if you have another charged battery''', such as from the [http://us.direct.openmoko.com/products/spares-pack Spares pack], you can boot the Neo with the good battery, plug in wall-charger, and hot-swap the drained battery while booted. This allows you to immediately start "fast-charging" with the wall-charger. (Neo needs to be booted to recognize charger and switch to fast-charging)
 
 *Your have to install "illume-config" to have more control over power management, scrolling speeds, keyboard options, and to change how the interface looks.
 
