--- a/GPS_Data_Logger.mw
+++ b/GPS_Data_Logger.mw
@@ -25,7 +25,12 @@ Initially the main functions could be broken out these components.
 
 === GPS multiplexer ===
 
-Look at gpsd and gypsy (and the related religious wars) and either use one of them or use them for inspiration. 
+Look at gpsd and gypsy and either use one of them or use them for inspiration. 
+See the Gypsy author's take on GPSd here: http://folks.o-hand.com/iain/gypsy/why-not-gpsd.html
+
+So far Gypsy looks pretty good to me.
+
+Maybe the control program should be separated out from the multiplexer.
 
 Partial list of requirements for the multiplexer
 * Control internal GPS receiver
