/* 1.19 Support of Encryption A5/1 and A5/2 */ BTS oneliner page -> Glossary

--- a/GSM02.07.mw
+++ b/GSM02.07.mw
@@ -120,7 +120,7 @@ All of this will be handled by the [[Dialer#In_Call_Mode | In Call Mode]] of the
 No problem. This just says the we need to support [[SIM]] cards in their 'normal' way.
 
 === 1.19 Support of Encryption A5/1 and A5/2 ===
-Those are the two standard GSM ciphers for the [[MS]]-[[BTS]] interface. [[TI Calypso]] does this.
+Those are the two standard GSM ciphers for the [[MS]]-[[Glossary#BTS|BTS]] interface. [[TI Calypso]] does this.
 
 === 1.20 Short Message Service Cell Broadcast ===
 We need to support receiving SMS Cell Broadcast.  Interestingly, the requirement doesn't say we need to actually support displaying them :)  Reception is supposedly handled within [[TI Calypso]]. Anyway, we should display them.
